--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
 		"vite": "5.4.8",
 		"vite-plugin-css-injected-by-js": "3.5.2",
 		"vite-plugin-dts": "4.2.3"
-	}
+	},
+	"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
