--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@limpopo113/editorjs-color-picker",
-	"version": "1.1.2",
+	"name": "@manuplan/editorjs-color-picker",
+	"version": "1.1.3",
 	"private": false,
 	"module": "dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -32,5 +32,8 @@
 		"vite-plugin-css-injected-by-js": "3.5.2",
 		"vite-plugin-dts": "4.2.3"
 	},
+	"publishConfig": {
+    "registry": "https://gl.salesap.ru/api/v4/projects/134/packages/npm/"
+  },
 	"packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
